k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: artifactor
  labels:
    app: artifactor
    version: v3.0
    environment: base
